done with blog page

--- a/public/styles.css
+++ b/public/styles.css
@@ -859,6 +859,10 @@ input[type="range"]::-ms-fill-lower{
   z-index: 40;
 }
 
+.m-6{
+  margin: 1.5rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -889,12 +893,21 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: 5rem;
 }
 
-.mt-\[20\%\]{
-  margin-top: 20%;
+.my-7{
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+
+.mt-\[15\%\]{
+  margin-top: 15%;
 }
 
 .mb-6{
   margin-bottom: 1.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .ml-3{
@@ -933,16 +946,12 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 2.5rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
-}
-
-.mt-\[15\%\]{
-  margin-top: 15%;
-}
-
 .block{
   display: block;
+}
+
+.inline{
+  display: inline;
 }
 
 .flex{
@@ -993,6 +1002,18 @@ input[type="range"]::-ms-fill-lower{
   width: 50%;
 }
 
+.w-\[90\%\]{
+  width: 90%;
+}
+
+.w-\[40\%\]{
+  width: 40%;
+}
+
+.w-\[100\%\]{
+  width: 100%;
+}
+
 .w-6{
   width: 1.5rem;
 }
@@ -1018,12 +1039,16 @@ input[type="range"]::-ms-fill-lower{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1044,6 +1069,10 @@ input[type="range"]::-ms-fill-lower{
 
 .justify-between{
   justify-content: space-between;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .gap-9{
@@ -1104,6 +1133,14 @@ input[type="range"]::-ms-fill-lower{
   border-radius: 0.75rem;
 }
 
+.rounded-tr-lg{
+  border-top-right-radius: 0.5rem;
+}
+
+.rounded-br-lg{
+  border-bottom-right-radius: 0.5rem;
+}
+
 .rounded-tr-md{
   border-top-right-radius: 0.375rem;
 }
@@ -1112,12 +1149,8 @@ input[type="range"]::-ms-fill-lower{
   border-bottom-right-radius: 0.375rem;
 }
 
-.rounded-tr-lg{
-  border-top-right-radius: 0.5rem;
-}
-
-.rounded-br-lg{
-  border-bottom-right-radius: 0.5rem;
+.border-0{
+  border-width: 0px;
 }
 
 .border{
@@ -1128,12 +1161,17 @@ input[type="range"]::-ms-fill-lower{
   border-width: 4px;
 }
 
-.border-0{
-  border-width: 0px;
-}
-
 .border-2{
   border-width: 2px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-green-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(49 196 141 / var(--tw-border-opacity));
 }
 
 .border-gray-200{
@@ -1165,6 +1203,16 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(0 163 150 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-green-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
+}
+
 .bg-green-100{
   --tw-bg-opacity: 1;
   background-color: rgb(222 247 236 / var(--tw-bg-opacity));
@@ -1173,11 +1221,6 @@ input[type="range"]::-ms-fill-lower{
 .bg-blue-700{
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
-}
-
-.bg-green-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
 }
 
 .bg-gray-50{
@@ -1193,11 +1236,6 @@ input[type="range"]::-ms-fill-lower{
 .bg-green-600{
   --tw-bg-opacity: 1;
   background-color: rgb(5 122 85 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-green-800{
@@ -1260,6 +1298,21 @@ input[type="range"]::-ms-fill-lower{
   padding-bottom: 1.25rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1268,11 +1321,6 @@ input[type="range"]::-ms-fill-lower{
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .px-5{
@@ -1313,11 +1361,6 @@ input[type="range"]::-ms-fill-lower{
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-20{
@@ -1372,11 +1415,6 @@ input[type="range"]::-ms-fill-lower{
   font-size: 25px;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -1385,6 +1423,11 @@ input[type="range"]::-ms-fill-lower{
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-4xl{
@@ -1445,6 +1488,16 @@ input[type="range"]::-ms-fill-lower{
   color: rgb(0 204 187 / var(--tw-text-opacity));
 }
 
+.text-\[\#005C54\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 92 84 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1478,6 +1531,15 @@ input[type="range"]::-ms-fill-lower{
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(4 108 78 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .transition-transform{
@@ -1577,6 +1639,10 @@ input[type="range"]::-ms-fill-lower{
 
   .md\:w-\[80\%\]{
     width: 80%;
+  }
+
+  .md\:w-\[90\%\]{
+    width: 90%;
   }
 
   .md\:w-auto{
